# ProofOfHeart-stellar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PR_BODY.md  README.md  SECURITY.md  body17.txt  body26.txt  body29.txt  body8.txt  issue17.json  issue26.json  issue29.json  issue8.json  pr_data.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: errors.rs  lib.rs  revenue_share_proptest.rs  storage.rs  test.rs  types.rs  update_admin_test.rs  voting.rs
test_snapshots/test/: test_cancel_and_refund.1.json  test_contribute_and_withdraw_success.1.json  test_create_and_validation.1.json  test_failure_states.1.json  test_get_campaign_count.1.json  test_list_active_campaigns.1.json  test_list_active_campaigns_all_cancelled.1.json  test_list_active_campaigns_empty_state.1.json  test_list_active_campaigns_pagination.1.json  test_list_active_campaigns_with_withdrawn.1.json  test_list_campaigns_edge_cases.1.json  test_list_campaigns_empty_state.1.json  test_list_campaigns_normal_pagination.1.json  test_pull_based_revenue_distribution.1.json
