[package]
name = "proof-of-heart"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "=20.1.0" }

[dev-dependencies]
soroban-sdk = { version = "=20.1.0", features = ["testutils"] }
derive_arbitrary = "=1.3.2"
proptest = "1"

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
